--- a/sharinpix/src/classes/TokenGeneratorController.cls
+++ b/sharinpix/src/classes/TokenGeneratorController.cls
@@ -2,19 +2,19 @@ public with sharing class TokenGeneratorController {
 //kevan 20170303
 //
     public Id recordId {get;set;}
-    public Token__c token {get;set;}
+    public SharinPixPermission__c token {get;set;}
     public String vfMode {get; set;}
     public Map<String, String> urlparams = new Map<String, String>();
-    
+
     public TokenGeneratorController(ApexPages.StandardController controller){
         recordId = controller.getId();
         if (string.isNotBlank(recordId)){
-        	token = [select id, name, description__c, json__c from Token__c where id = :recordId limit 1];
+            token = [select id, name, description__c, json__c from SharinPixPermission__c where id = :recordId limit 1];
         }
         else {
-        	token = new Token__c();
+            token = new SharinPixPermission__c();
         }
-        
+
         urlparams = ApexPages.currentPage().getParameters();
         if (urlparams.get('id') == null){
             vfMode = 'New';
@@ -24,13 +24,13 @@ public with sharing class TokenGeneratorController {
             vfMode = 'View';
         }
     }
-    
+
     public PageReference cancelEdit(){
         PageReference pageref = new PageReference(urlparams.get('retURL'));
         pageref.setRedirect(true);
         return pageref;
     }
-    
+
     public PageReference updateToken(){
         system.debug('#### '+token);
         upsert token;
