--- a/sharinpix/src/classes/MobileUploadController.cls
+++ b/sharinpix/src/classes/MobileUploadController.cls
@@ -2,21 +2,22 @@ public class MobileUploadController {
     public String jobAlbumId { get; set; }
     public String jobName { get; set; }
     public String jobOptions { get; set; }
-    
+    public Integer jobDelay { get; set; }
+
     public PageReference generateAppUrl() {
-        if (isEmpty(jobAlbumId)) jobAlbumId = ApexPages.currentPage().getParameters().get('albumId');
-        if (isEmpty(jobAlbumId)) return null;
-        if (isEmpty(jobName))    jobName = ApexPages.currentPage().getParameters().get('name');
-        if (isEmpty(jobName))    jobName = jobAlbumId;
-        if (isEmpty(jobOptions)) jobOptions = '{}';
-        
-        Map<String, Object> options = (Map<String, Object>)JSON.deserializeUntyped(jobOptions);
-        
+        if (String.isBlank(jobAlbumId)) jobAlbumId = ApexPages.currentPage().getParameters().get('albumId');
+        if (String.isBlank(jobAlbumId)) return null;
+        if (String.isBlank(jobName))    jobName = ApexPages.currentPage().getParameters().get('name');
+        if (String.isBlank(jobName))    jobName = jobAlbumId;
+        if (String.isBlank(jobOptions)) jobOptions = '{}';
+
+        Map<String, Object> options = getOptions(jobOptions);
+
         jobAlbumId = jobAlbumId instanceOf Id ? (Id)jobAlbumId : jobAlbumId;
         Map<String, Object> params = new Map<String, Object> {
             'album_id' => jobAlbumId,
             'name' => jobName,
-            'exp' => (DateTime.now().getTime()/1000) + 14400,
+            'exp' => jobDelay != 0 ? (DateTime.now().getTime()/1000) + jobDelay : 0,
             'native_app_options' => options,
             'abilities' => new Map<String, Object> {
                 jobAlbumId => new Map<String, Object> {
@@ -36,14 +37,13 @@ public class MobileUploadController {
         };
         sharinpix.Client clientInstance = sharinpix.Client.getInstance();
         String appUrl = 'https://app.sharinpix.com/native_upload?token=' + clientInstance.token(params);
+
         PageReference pageRef = new PageReference(appUrl);
         pageRef.setRedirect(true);
         return pageRef;
     }
-    
-    private Boolean isEmpty(String s) {
-        if (s == null) return true;
-        if (s.trim() == '') return true;
-        return false;
+
+    private Map<String, Object> getOptions(String options) {
+        return (Map<String, Object>)JSON.deserializeUntyped(options.replace('\'', '"'));
     }
 }
