--- a/sharinpix/src/classes/MobileUploadController.cls
+++ b/sharinpix/src/classes/MobileUploadController.cls
@@ -7,30 +7,24 @@ public class MobileUploadController {
     public PageReference generateAppUrl() {
         if (String.isBlank(jobAlbumId)) jobAlbumId = ApexPages.currentPage().getParameters().get('albumId');
         if (String.isBlank(jobAlbumId)) return null;
+        if (jobAlbumId InstanceOf Id)   jobAlbumid = (Id)jobAlbumId;
         if (String.isBlank(jobName))    jobName = ApexPages.currentPage().getParameters().get('name');
         if (String.isBlank(jobName))    jobName = jobAlbumId;
         if (String.isBlank(jobOptions)) jobOptions = '{}';
+        if (jobDelay == null)           jobDelay = 300;
 
         Map<String, Object> options = getOptions(jobOptions);
 
-        jobAlbumId = jobAlbumId instanceOf Id ? (Id)jobAlbumId : jobAlbumId;
         Map<String, Object> params = new Map<String, Object> {
             'album_id' => jobAlbumId,
             'name' => jobName,
-            'exp' => jobDelay != 0 ? (DateTime.now().getTime()/1000) + jobDelay : 0,
+            'exp' => (jobDelay != 0) ? (DateTime.now().getTime()/1000) + jobDelay : 0,
             'native_app_options' => options,
             'abilities' => new Map<String, Object> {
                 jobAlbumId => new Map<String, Object> {
                     'Access' => new Map<String, Boolean> {
                         'see' => true,
-                        'image_upload' => true,
-                        'image_list' => true,
-                        'image_tag' => true,
-                        'image_delete' => true,
-                        'image_annotate' => true,
-                        'image_rotate' => true,
-                        'image_crop' => true,
-                        'image_download' => true
+                        'image_upload' => true
                     }
                 }
             }
