--- a/sharinpix/src/classes/UtilsTest.cls
+++ b/sharinpix/src/classes/UtilsTest.cls
@@ -249,4 +249,23 @@ private with sharing class UtilsTest {
         System.assertEquals(JSON.serialize(response), '{}');
     }
 
+    static testMethod void testGenerateMobileAppUrl() {
+        MobileUploadController mUploadCtrl = new MobileUploadController();
+        String albumId = 'TestId';
+        String name = 'TestName';
+        String optionsJson = '{\'grayscale\':true}';
+        Map<String, Object> options = Utils.parseJsonParam(optionsJson);
+
+        Test.startTest();
+        String appurl = (new Utils()).generateMobileAppUrl(albumId, name, options, 300);
+        Test.stopTest();
+
+        System.assert(appUrl.contains('native_upload'));
+        String token = appUrl.substringAfter('token=');
+        String[] tokenParts = token.split('\\.');
+        String decodedData = EncodingUtil.base64Decode(tokenParts[1]).toString();
+        System.assert(decodedData.contains('TestId'));
+        System.assert(decodedData.contains('TestName'));
+        System.assert(decodedData.contains('{"grayscale":true}'));
+    }
 }
