remove namespace from methods

--- a/sharinpix/src/classes/MobileUploadController.cls
+++ b/sharinpix/src/classes/MobileUploadController.cls
@@ -16,7 +16,7 @@ public with sharing class MobileUploadController {
     public String jobOptions { get; set; }
     public Integer linkExpiration { get; set; }
 
-    private sharinpix.Client clientInstance = sharinpix.Client.getInstance();
+    private Client clientInstance = Client.getInstance();
 
     /**
      * Generate SharinPix URL to launch mobile application
@@ -24,9 +24,9 @@ public with sharing class MobileUploadController {
      */
     public PageReference generateAppUrl() {
         if (String.isBlank(jobOptions)) jobOptions = '{}';
-        Map<String, Object> options = sharinpix.Utils.parseJsonParam(jobOptions);
+        Map<String, Object> options = Utils.parseJsonParam(jobOptions);
 
-        String appUrl = (new sharinpix.Utils()).generateMobileAppUrl(jobAlbumId, jobName, options, linkExpiration);
+        String appUrl = (new Utils()).generateMobileAppUrl(jobAlbumId, jobName, options, linkExpiration);
         PageReference pageRef = new PageReference(appUrl);
         pageRef.setRedirect(true);
         return pageRef;
